assets/style.css
* {
    padding:0;
    margin:0;
    box-sizing:0;
}

body {
    font-family: verdand;
}

.banner { /*centered background-image*/
    width:100%;
    height: 100vh;
    background: url('../assets/image.png');
    background-repeat: no-repeat;
    background-size: cover;
}

.content-area { /*moved items to the center of the page*/
    height:100%;
    display: flex;
    flex-direction:column;
    justify-content: center;
    align-items: center;
}

.content {
    text-align: center;
}

.content header { /*adds style to input*/
    font-size: 80px;
    color: white;
}

.content input {
    width: 350px;
    height: 25px;
}

.content button {
    background-color: white;
    padding: 12px 28px;
    color: black;
    border-radius: 12px;
    border: 2px solid #4CAF50;
    cursor: pointer; 
}

.content button:hover {
    background-color: #4CAF50;
    color: white;
    transition-duration: 0.4s;
}

button {
    margin: 15px;
}

/*search page*/

@import "https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css";

html {
    background-color:rgb(85, 83, 83);
    width:100%;
    height: 100%;
    min-height: 100%;
    background-image: url('https://static3.cbrimages.com/wordpress/wp-content/uploads/2021/04/Oracle-Barbara-Gordon-feature.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
}

.card {
    margin: 20px;
}

.container {
    margin: center;
    margin-top: 100px;
    height: 200px;
    width: 500px;
}

.image { 
    height: 650px;
}

#Pic {
 width: 2;
 height: 3;
}

#navi {
    background-color: black;
    padding: 25px;
}

#AOLogo {
    color: #4CAF50;
}

/* //center images, fix background image, fix title size */
 
/*adding upcoming trailer with countdown timer*/

.poster {
    margin: 30px;
    border: 3px solid rgba(255, 0, 43, 0.007);
    width: 150px;
    height: 200px;    
}

ul {
    display: flex;
    justify-content: space-evenly;
    list-style: none;
}

div span {
    color: white ;
}

li {
    display: flex;
    flex-direction: column;
    text-align: center;
    font-style: italic;
    font-family: Comic Sans;
    color: red;
    font-size: 32px;
    opacity: 0;
}

li:hover{
    opacity: 1;
}

